--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       <a onclick="scrollContact()" id="contact-button"><button>Contact</button></a>
     </header>
 
+    <form action="" method="get">
+      <input type="text">
+      <input type="password">
+      <input type="submit" value="Submit">
+    </form>
+
     <script src="dist/scroll.js"></script>
   </body>
 </html>
